--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,6 +28,14 @@
                         <a class="nav-link" href="/register">Register</a>
                     </li>
                 {% endif %}
+                {% if app.session.get('user') and app.session.get('user').role == 'admin' %}
+                    <li class="nav-item">
+                        <a href="/admin/statistics" class="btn btn-link">Statistics</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/admin/reports" class="btn btn-link">Reports</a>
+                    </li>
+                {% endif %}
             </ul>
         </div>
     </div>
@@ -40,6 +48,9 @@
 <!-- Bootstrap JS (from CDN) -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-{% block javascripts %}{% endblock %}
+{% block javascripts %}
+    <script src="/build/runtime.js"></script>
+    <script src="/build/app.js"></script>
+{% endblock %}
 </body>
 </html>
